# micropsi-test

./: README.md  pyproject.toml
micropsi_test/: __init__.py  __main__.py  cli.py  main.py
